# wasm-gl

./: .gitignore  Cargo.toml  README.md  index.html  index.js  init.js  notes.md  package-lock.json  package.json  web.config  webpack.config.js
js/: lib.js  webrs-header.js  webrs-view.js
sh/: run.sh
src/: func.rs  lib.rs  math.rs  program.rs  render.rs  renderGl.rs  setup.rs  shader.rs  source.rs
src/gl/: glprogram.rs  glshader.rs  source.rs
src/glsl/: fs.glsl  vs.glsl
src/lib/: gl_render.rs  mod.rs
src/lib/program/: gl_program.rs
src/lib/res/: gl_program.rs  gl_shader.rs  shader_data.rs
src/lib/res/frg/: shader.fs
src/lib/shader/: gl_shader.rs
src/res/: shader.vs
static/: style.css
