[package]
name = "crb"
version = "0.1.0"
authors = ["MadebyDaris <daris.idirene@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.50"
wasm-bindgen = "0.2.73"
lazy_static = "1.3.0"
console_error_panic_hook = "=0.1.6"
nalgebra = "0.18.0"

[dependencies.web-sys]
version = "0.3.49"
features = [
  'Document',
  'Element',
  'Window',
  'console',
  'Node',

  'HtmlCanvasElement',
  'HtmlCollection',

  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',

  'CanvasRenderingContext2d'
]