[package]
name = "wwgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
lazy_static = "1.3.0"
console_error_panic_hook = "=0.1.6"
nalgebra = "0.18.0"

[dependencies.web-sys]
version = "0.3.49"
features = [
  'Document',
  'Element',
  'Window',
  'console',
  'Node',
  'HtmlCanvasElement',
  'HtmlCollection',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlRenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'CanvasRenderingContext2d',
  'WebGlVertexArrayObject'
]